[tool.poetry]
name = "sktidy"
version = "0.1.0"
description = "Python package that produces tidy output for sklearn model evaluation!"
authors = ["Xudong Yang <xd1222@student.ubc.ca>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
