[tool.poetry]
name = "sktidy"
version = "0.1.2"
description = "Python package that produces tidy output for sklearn model evaluation!"
authors = ["Xudong Yang <xd1222@student.ubc.ca>", 
"Asma Al-Odaini <asmaalodaini@gmail.com>", 
"Jacob McFarlane <jacob@jakenow.net>", 
"Heidi Ye <heidi.ye@icloud.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/UBC-MDS/sktidy"
repository = "https://github.com/UBC-MDS/sktidy"
documentation = 'https://sktidy.readthedocs.io'

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.3"
sklearn = "^0.0"
statsmodels = "^0.12.2"
python-semantic-release = "^7.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.2"
pytest-cov = "^2.11.1"
codecov = "^2.1.11"
python-semantic-release = "^7.15.0"
flake8 = "^3.8.4"
Sphinx = "^3.5.1"
sphinxcontrib-napoleon = "^0.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.semantic_release]
version_variable = "sktidy/__init__.py:__version__"
version_source = "commit"
upload_to_pypi = "false"
patch_without_tag = "true"
